[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dress-fraud-detection"
version = "0.1.0"
description = "DRESS: DRL-enhanced semi-supervised graph neural network for credit card fraud detection."
readme = "README.md"
requires-python = ">=3.7"

[tool.setuptools.packages.find]
where = ["src"]
